--- a/MasavUI/MainWindow.xaml
+++ b/MasavUI/MainWindow.xaml
@@ -2,7 +2,7 @@
                   xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                   xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                   xmlns:mui="http://firstfloorsoftware.com/ModernUI"
-                  Title="1.0 מערכת מסב" IsTitleVisible="True" 
+                  Title="1.0 מערכת הוראות קבע" IsTitleVisible="True" 
 				 
                   ContentSource="/Pages/MainPage.xaml"
 				  WindowStyle="None"  Loaded="MainWindow1_Loaded"
