--- a/MasavUI/Pages/BroadcastPage.xaml
+++ b/MasavUI/Pages/BroadcastPage.xaml
@@ -38,7 +38,7 @@
                 </Grid>
             </Border>
             <StackPanel Orientation="Horizontal" Margin="10"  Grid.Column="1" Grid.ColumnSpan="2" FlowDirection="LeftToRight">
-                <Button Name="btnEditCostumer" Content="עריכה"  Click="btnEditBroadcast_Click" Margin="10,10,10,10" DockPanel.Dock="Right" IsEnabled="True"/>
+                <Button Name="btnEditCostumer" Content="עריכה"  Click="btnEditBroadcast_Click" Margin="10,10,10,10" DockPanel.Dock="Right" IsEnabled="True" Background="#FF9CB2DA"  FontWeight="Bold" BorderBrush="#FF211D1D"/>
                 
             </StackPanel>
         </Grid>
