--- a/MasavUI/Pages/ImportDateFromExcel.xaml
+++ b/MasavUI/Pages/ImportDateFromExcel.xaml
@@ -11,7 +11,7 @@
 			<StackPanel MinWidth="700">
 				<Grid  Margin="10,10,10,0" >
 					<Grid.ColumnDefinitions>
-						<ColumnDefinition Width="1*" />
+						<ColumnDefinition Width="1.5*" />
 						<ColumnDefinition Width="5*" />
 					</Grid.ColumnDefinitions>
 					<Grid.RowDefinitions>
@@ -22,23 +22,21 @@
 						<RowDefinition Height="*"/>
 						<RowDefinition Height="*"/>
 						<RowDefinition Height="*"/>
+                        <RowDefinition Height="*"/>
 					</Grid.RowDefinitions>
                     <StackPanel Orientation="Horizontal" Grid.Column="0" Grid.Row="3">
 						<TextBlock Text="מוסד" Margin="10" DockPanel.Dock="Left" />
                         <ComboBox Name="cmbCustomers" Margin="0,10,50,10" DockPanel.Dock="Left" >
                         </ComboBox >
-                    </StackPanel>
-					<Button Name="btnCreate" Content="יבא קובץ"  Margin="10" DockPanel.Dock="Right" Grid.Column="0" Grid.Row="4" Click="btnCreate_Click"  Background="#FFDFE0EA"/>
-					<TextBlock Name="tbProblematic" Text="דוח כזה כבר קיים ,האם תרצה ליצור את הדוח בכל זאת?" Margin="10" DockPanel.Dock="Left" Grid.Column="0" Grid.Row="6" Foreground="Red" Visibility="Collapsed" TextWrapping="WrapWithOverflow" />
-					<StackPanel Name="spProblematic"  Orientation="Horizontal" Margin="10,0,10,10"  Grid.Row="7" Grid.Column="0"  FlowDirection="LeftToRight" Visibility="Collapsed">
-						<Button Name="btnCancalCreateReport" Content="לא"  Click="btnCancalCreateReport_Click" Margin="10" DockPanel.Dock="Right" IsEnabled="True"/>
-						<Button Name="btnCreateReport" Content="כן" Click="btnForceCreateReport_Click"  Margin="10" DockPanel.Dock="Right" />
-					</StackPanel>
-					
 
-					<TextBlock Name="tbWaiting" Text="תהליך הטעינה לוקח מספר דקות. אנא המתן." Margin="10" DockPanel.Dock="Left" Grid.Column="0" Grid.Row="5"  Visibility="Collapsed" TextWrapping="WrapWithOverflow"/>
-					<mui:ModernProgressRing Name="mpbWaiting" IsActive="{Binding IsActive}" Visibility="Collapsed" Grid.Column="0" Grid.Row="6"/>
-					<TextBlock Name="tbProgressSuccess"  Margin="10" DockPanel.Dock="Left" Grid.Column="0" Grid.Row="5"  Visibility="Collapsed" TextWrapping="WrapWithOverflow"/>
+                    </StackPanel>
+                    <CheckBox  Name="cbRemoveExsist" Margin="0,10,0,10" MinWidth="10" DockPanel.Dock="Left"  IsChecked="False" Grid.Column="0" Grid.Row="4">
+                          הסר משלמים שלא קיימים באקסל</CheckBox >
+                    <Button Name="btnCreate" Content="יבא קובץ"  Margin="10" DockPanel.Dock="Right" Grid.Column="0" Grid.Row="5" Click="btnCreate_Click"  Background="#FFDFE0EA"/>
+
+					<TextBlock Name="tbWaiting" Text="תהליך הטעינה לוקח מספר דקות. אנא המתן." Margin="10" DockPanel.Dock="Left" Grid.Column="0" Grid.Row="6"  Visibility="Collapsed" TextWrapping="WrapWithOverflow"/>
+					<mui:ModernProgressRing Name="mpbWaiting" IsActive="{Binding IsActive}" Visibility="Collapsed" Grid.Column="0" Grid.Row="7"/>
+					<TextBlock Name="tbProgressSuccess"  Margin="10" DockPanel.Dock="Left" Grid.Column="0" Grid.Row="6"  Visibility="Collapsed" TextWrapping="WrapWithOverflow"/>
 				</Grid>
 			</StackPanel>
 		</ScrollViewer>
