--- a/MasavUI/Pages/CreateNewReports.xaml
+++ b/MasavUI/Pages/CreateNewReports.xaml
@@ -11,7 +11,7 @@
 			<StackPanel MinWidth="700">
 				<Grid  Margin="10,10,10,0" >
 					<Grid.ColumnDefinitions>
-						<ColumnDefinition Width="1*" />
+						<ColumnDefinition Width="1.5*" />
 						<ColumnDefinition Width="5*" />
 					</Grid.ColumnDefinitions>
 					<Grid.RowDefinitions>
@@ -46,17 +46,24 @@
                         <ComboBox Name="cmbCustomers" Margin="0,10,50,10" DockPanel.Dock="Left" SelectionChanged="CmbCustomers_SelectionChanged">
                         </ComboBox >
                     </StackPanel>
-					<Button Name="btnCreate" Content="צור דוחות"  Margin="10" DockPanel.Dock="Right" Grid.Column="0" Grid.Row="4" Click="btnCreate_Click"  Background="#FFDFE0EA"/>
-					<TextBlock Name="tbProblematic" Text="דוח כזה כבר קיים ,האם תרצה ליצור את הדוח בכל זאת?" Margin="10" DockPanel.Dock="Left" Grid.Column="0" Grid.Row="6" Foreground="Red" Visibility="Collapsed" TextWrapping="WrapWithOverflow" />
-					<StackPanel Name="spProblematic"  Orientation="Horizontal" Margin="10,0,10,10"  Grid.Row="7" Grid.Column="0"  FlowDirection="LeftToRight" Visibility="Collapsed">
+                    <StackPanel Orientation="Horizontal" Grid.Column="0" Grid.Row="4">
+                        <TextBlock Text="מחלקה" Margin="10" DockPanel.Dock="Left" />
+                        <ComboBox Name="cmbClass" Margin="0,10,50,10" DockPanel.Dock="Left" >
+                        </ComboBox >
+                    </StackPanel>
+                    <CheckBox  Name="cbIsOverride" Margin="0,10,0,10" MinWidth="10" DockPanel.Dock="Left"  Grid.Column="0" Grid.Row="5">
+                        האם זאת ריצת תיקון לריצה האחרונה</CheckBox >
+                    <Button Name="btnCreate" Content="צור דוחות"  Margin="10" DockPanel.Dock="Right" Grid.Column="0" Grid.Row="6" Click="btnCreate_Click"  Background="#FFDFE0EA"/>
+					<TextBlock Name="tbProblematic" Text="דוח כזה כבר קיים ,האם תרצה ליצור את הדוח בכל זאת?" Margin="10" DockPanel.Dock="Left" Grid.Column="0" Grid.Row="8" Foreground="Red" Visibility="Collapsed" TextWrapping="WrapWithOverflow" />
+					<StackPanel Name="spProblematic"  Orientation="Horizontal" Margin="10,0,10,10"  Grid.Row="8" Grid.Column="0"  FlowDirection="LeftToRight" Visibility="Collapsed">
 						<Button Name="btnCancalCreateReport" Content="לא"  Click="btnCancalCreateReport_Click" Margin="10" DockPanel.Dock="Right" IsEnabled="True"/>
 						<Button Name="btnCreateReport" Content="כן" Click="btnForceCreateReport_Click"  Margin="10" DockPanel.Dock="Right" />
 					</StackPanel>
 					
 
-					<TextBlock Name="tbWaiting" Text="תהליך הפקת הדוחות לוקח מספר דקות. אנא המתן." Margin="10" DockPanel.Dock="Left" Grid.Column="0" Grid.Row="5"  Visibility="Collapsed" TextWrapping="WrapWithOverflow"/>
-					<mui:ModernProgressRing Name="mpbWaiting" IsActive="{Binding IsActive}" Visibility="Collapsed" Grid.Column="0" Grid.Row="6"/>
-					<TextBlock Name="tbProgressSuccess"  Margin="10" DockPanel.Dock="Left" Grid.Column="0" Grid.Row="5"  Visibility="Collapsed" TextWrapping="WrapWithOverflow"/>
+					<TextBlock Name="tbWaiting" Text="תהליך הפקת הדוחות לוקח מספר דקות. אנא המתן." Margin="10" DockPanel.Dock="Left" Grid.Column="0" Grid.Row="7"  Visibility="Collapsed" TextWrapping="WrapWithOverflow"/>
+					<mui:ModernProgressRing Name="mpbWaiting" IsActive="{Binding IsActive}" Visibility="Collapsed" Grid.Column="0" Grid.Row="7"/>
+					<TextBlock Name="tbProgressSuccess"  Margin="10" DockPanel.Dock="Left" Grid.Column="0" Grid.Row="7"  Visibility="Collapsed" TextWrapping="WrapWithOverflow"/>
 				</Grid>
 			</StackPanel>
 		</ScrollViewer>
