--- a/MasavUI/Pages/ReceiptsReport.xaml
+++ b/MasavUI/Pages/ReceiptsReport.xaml
@@ -64,17 +64,22 @@
                         <ComboBox Name="cmbCustomers" Margin="0,10,50,10" DockPanel.Dock="Left"  SelectionChanged="CmbCustomers_SelectionChanged">
                         </ComboBox >
                     </StackPanel>
-                    <Button Name="btnCreate" Content="צור דוחות"  Margin="34,10,34.333,9.667" DockPanel.Dock="Right" Grid.Column="0" Grid.Row="5" Click="btnCreate_Click"  Background="#FFDFE0EA"/>
-                    <TextBlock Name="tbProblematic" Text="דוח כזה כבר קיים ,האם תרצה ליצור את הדוח בכל זאת?" Margin="10,10.333,9.333,-10.333" DockPanel.Dock="Left" Grid.Column="0" Grid.Row="6" Foreground="Red" Visibility="Collapsed" TextWrapping="WrapWithOverflow"  />
-                    <StackPanel Name="spProblematic"  Orientation="Horizontal" Margin="10,0.333,9.333,-0.333"  Grid.Row="7" Grid.Column="0"  FlowDirection="LeftToRight" Visibility="Collapsed" Grid.RowSpan="3">
+                    <StackPanel Orientation="Horizontal" Grid.Column="0" Grid.Row="5">
+                        <TextBlock Text="מחלקה" Margin="10" DockPanel.Dock="Left" />
+                        <ComboBox Name="cmbClass" Margin="0,10,50,10" DockPanel.Dock="Left"  SelectionChanged="CmbCustomers_SelectionChanged">
+                        </ComboBox >
+                    </StackPanel>
+                    <Button Name="btnCreate" Content="צור דוחות"  Margin="34,10,34.333,9.667" DockPanel.Dock="Right" Grid.Column="0" Grid.Row="6" Click="btnCreate_Click"  Background="#FFDFE0EA"/>
+                    <TextBlock Name="tbProblematic" Text="דוח כזה כבר קיים ,האם תרצה ליצור את הדוח בכל זאת?" Margin="10,10.333,9.333,-10.333" DockPanel.Dock="Left" Grid.Column="0" Grid.Row="7" Foreground="Red" Visibility="Collapsed" TextWrapping="WrapWithOverflow"  />
+                    <StackPanel Name="spProblematic"  Orientation="Horizontal" Margin="10,0.333,9.333,-0.333"  Grid.Row="8" Grid.Column="0"  FlowDirection="LeftToRight" Visibility="Collapsed" Grid.RowSpan="3">
                         <Button Name="btnCancalCreateReport" Content="לא"  Click="btnCancalCreateReport_Click" Margin="10" DockPanel.Dock="Right" IsEnabled="True"/>
                         <Button Name="btnCreateReport" Content="כן" Click="btnForceCreateReport_Click"  Margin="10" DockPanel.Dock="Right" />
                     </StackPanel>
 
-                    <TextBlock Name="tbWaiting" Margin="10,10.333,9.333,-10.333" DockPanel.Dock="Left" Grid.Column="0" Grid.Row="6"  Visibility="Collapsed" TextWrapping="WrapWithOverflow" Grid.RowSpan="6"/>
-                    <TextBlock Name="tbError" Text="תהליך הפקת הדוחות לוקח מספר דקות. אנא המתן." Margin="10,10.333,9.333,-10.333" DockPanel.Dock="Left" Grid.Column="0" Grid.Row="6"  Visibility="Collapsed" TextWrapping="WrapWithOverflow" Grid.RowSpan="6"/>
-                    <mui:ModernProgressRing Name="mpbWaiting" IsActive="{Binding IsActive}" Visibility="Visible" Grid.Column="0" Grid.Row="5" Height="32" Margin="102,31,103.333,-16.333" Grid.RowSpan="7" Width="32"/>
-                    <TextBlock Name="tbProgressSuccess"  Margin="10,10.333,9.333,-10.333" DockPanel.Dock="Left" Grid.Column="0" Grid.Row="6"  Visibility="Collapsed" TextWrapping="WrapWithOverflow" Grid.RowSpan="5"/>
+                    <TextBlock Name="tbWaiting" Margin="10,10.333,9.333,-10.333" DockPanel.Dock="Left" Grid.Column="0" Grid.Row="9"  Visibility="Collapsed" TextWrapping="WrapWithOverflow" Grid.RowSpan="6"/>
+                    <TextBlock Name="tbError" Text="תהליך הפקת הדוחות לוקח מספר דקות. אנא המתן." Margin="10,10.333,9.333,-10.333" DockPanel.Dock="Left" Grid.Column="0" Grid.Row="10"  Visibility="Collapsed" TextWrapping="WrapWithOverflow" Grid.RowSpan="6"/>
+                    <mui:ModernProgressRing Name="mpbWaiting" IsActive="{Binding IsActive}" Visibility="Visible" Grid.Column="0" Grid.Row="8" Height="32" Margin="102,31,103.333,-16.333" Grid.RowSpan="7" Width="32"/>
+                    <TextBlock Name="tbProgressSuccess"  Margin="10,10.333,9.333,-10.333" DockPanel.Dock="Left" Grid.Column="0" Grid.Row="10"  Visibility="Collapsed" TextWrapping="WrapWithOverflow" Grid.RowSpan="5"/>
                 </Grid>
             </StackPanel>
         </ScrollViewer>
